--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -22,6 +22,14 @@ nav {
   text-decoration: none;
 }
 
+@media (max-width: 480px) {
+  nav {
+    flex-flow: column;
+  }
+  .nav-buttons {
+    justify-content: flex-start;
+  }
+}
 a {
   color: white;
   text-decoration: none;
